// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom FAB with no shadow(iOS) 1`] = `
<View
  accessibilityLabel="Custom FAB with no shadow(iOS)"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  enableFocusRing={true}
  focusable={true}
  iconPosition="before"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onLayout={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0f6cbd",
      "borderRadius": 9999,
      "display": "flex",
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 56,
      "minWidth": 56,
      "paddingEnd": 20,
      "paddingHorizontal": 16,
      "paddingStart": 16,
      "paddingVertical": 16,
      "width": undefined,
    }
  }
>
  <Text
    accessible={false}
    style={
      {
        "color": "#fff",
        "fontFamily": "Arial",
        "fontSize": 16,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    ♣
  </Text>
  <Text
    accessible={false}
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      {
        "color": "#ffffff",
        "fontFamily": "System",
        "fontSize": 13,
        "fontWeight": "600",
        "margin": 0,
        "marginBottom": 0,
        "marginEnd": 0,
        "marginStart": 8,
        "marginTop": 0,
      }
    }
  >
    Custom FAB with no shadow(iOS)
  </Text>
</View>
`;

exports[`Default FAB (iOS) 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "backgroundColor": "#0f6cbd",
      "borderRadius": 9999,
      "display": "flex",
      "justifyContent": "center",
      "minHeight": 56,
      "minWidth": 56,
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 1,
    }
  }
>
  <View
    accessibilityLabel="Default FAB (iOS)"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    enableFocusRing={true}
    focusable={true}
    iconPosition="before"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onLayout={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#0f6cbd",
        "borderRadius": 9999,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "minHeight": 56,
        "minWidth": 56,
        "paddingEnd": 20,
        "paddingHorizontal": 16,
        "paddingStart": 16,
        "paddingVertical": 16,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 4,
      }
    }
  >
    <Text
      accessible={false}
      style={
        {
          "color": "#fff",
          "fontFamily": "Arial",
          "fontSize": 16,
          "fontWeight": "400",
          "margin": 0,
        }
      }
    >
      ♣
    </Text>
    <Text
      accessible={false}
      ellipsizeMode="tail"
      numberOfLines={0}
      style={
        {
          "color": "#ffffff",
          "fontFamily": "System",
          "fontSize": 13,
          "fontWeight": "600",
          "margin": 0,
          "marginBottom": 0,
          "marginEnd": 0,
          "marginStart": 8,
          "marginTop": 0,
        }
      }
    >
      Default FAB (iOS)
    </Text>
  </View>
</View>
`;
